# Claude_gen_setup

./: .gitignore  LICENSE  README.md  pyproject.toml
claudegen/: __init__.py  cli.py  graph.py  ingestion.py  synthesis.py  ui.py  voice.py
tests/: __init__.py  test_graph.py  test_ingestion.py  test_synthesis.py  test_voice.py
