[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claudegen"
version = "0.1.0"
description = "Generate CLAUDE.md files using repo scanning, dependency graph analysis, and voice input"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "ClaudeGen Team", email = "claudegen@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0.0",
    "gradio>=4.0.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "networkx>=3.0.0",
    "faster-whisper>=0.10.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "gitignore-parser>=0.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
claudegen = "claudegen.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["claudegen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"